01-enovy-cert-manager/06-HTTP-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: http
  hostnames:
    - "argocd.harishshetty.xyz"
    - "grafana.harishshetty.xyz"
    - "prometheus.harishshetty.xyz"
    - "kibana.harishshetty.xyz"
    - "3tier.harishshetty.xyz"
    - "*.harishshetty.xyz"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
