01-enovy-cert-manager/06-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - argocd.harishshetty.xyz
  rules:
    - backendRefs:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - grafana.harishshetty.xyz
  rules:
    - backendRefs:
        - kind: Service
          name: stable-grafana
          namespace: prometheus
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - prometheus.harishshetty.xyz
  rules:
    - backendRefs:
        - kind: Service
          name: stable-kube-prometheus-sta-prometheus
          namespace: prometheus
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana-route
  namespace: default
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - kibana.harishshetty.xyz
  rules:
    - backendRefs:
        - kind: Service
          name: kibana-kibana
          namespace: elk
          port: 5601
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: 3tier-route
  namespace: prod
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - 3tier.harishshetty.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: frontend-svc
          namespace: prod
          port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: 3tier-route
#   namespace: prod
# spec:
#   parentRefs:
#     - name: external-gateway
#       namespace: gateway
#       sectionName: https
#   hostnames:
#     - 3tier.harishshetty.xyz
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /health
#         - path:
#             type: PathPrefix
#             value: /transaction
#       backendRefs:
#         - kind: Service
#           name: backend-svc
#           namespace: prod
#           port: 4000
